--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
